# voble

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: init-leaderboard.yml
anchor/: Anchor.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  txtx.yml
anchor/programs/voble/: Cargo.toml  build_log.txt
anchor/programs/voble/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
anchor/programs/voble/src/contexts/: admin.rs  game.rs  gameplay.rs  leaderboard.rs  mod.rs  prize.rs  profile.rs  voble.rs
anchor/programs/voble/src/instructions/: admin.rs  leaderboard.rs  mod.rs
anchor/programs/voble/src/instructions/admin/: init_config.rs  init_vaults.rs  mod.rs  update_config.rs  withdraw_revenue.rs
anchor/programs/voble/src/instructions/game/: achievements.rs  complete_game.rs  mod.rs  profile.rs  record_keystroke.rs  reset_session.rs  scoring.rs  start_game.rs  submit_guess.rs  update_player_stats.rs  update_profile_handler.rs  voble.rs  word_selection.rs
anchor/programs/voble/src/instructions/leaderboard/: finalize_leaderboard.rs  init_leaderboard.rs  mod.rs  ranking.rs
anchor/programs/voble/src/instructions/prize/: claim.rs  claim_prize.rs  create_entitlement.rs  distribution.rs  entitlement.rs  finalize.rs  finalize_period.rs  mod.rs
anchor/programs/voble/src/instructions/profile/: create_profile.rs  mod.rs
anchor/programs/voble/src/state/: config.rs  leaderboard.rs  mod.rs  period.rs  prize.rs  user.rs
anchor/programs/voble/src/utils/: math.rs  mod.rs  pda.rs  period.rs  validation.rs
anchor/runbooks/: README.md
anchor/scripts/: finalize-period-and-entitlements.ts  init-period-leaderboard.ts  initialize-program.ts  (+1 more)
(+73 files in other folders)
